--- a/themes/christmasbarrel-fundify/css/responsive.css
+++ b/themes/christmasbarrel-fundify/css/responsive.css
@@ -25,6 +25,10 @@
 #menu li a {
 	padding:0;
 }
+.votes-list .grid .social_icons_class {
+	float:none;
+	padding-top:5px;
+}
 
 @media screen and (min-width: 1160px) {
 }
@@ -122,6 +126,7 @@
 	.header_logo {
 		padding-left:10px;
 		width: 115px;
+		height:36px;
 	}
 	.sbfp_thumb {
 		width: 45%;
